# JuliaHubPlatform

./: .gitattributes  clone_batch.jl  clone_batch_improved.jl  repos.tsv
components/authorized-keys-github/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  example.overrides  runtests.sh
components/authorized-keys-github/.github/workflows/: CI.yml
components/authorized-keys-github/src/: main.rs
components/heptagon/: .gitignore  CHANGES  CONTRIBUTING.md  CTestConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  Makefile  Makefile-bin  Makefile-distrib  README.md  clean_heptc  config.in  configure  configure.in  heptagon.install  heptagon.opam  heptc  todo.txt
components/heptagon/compiler/: .merlin  Makefile  _tags.in  myocamlbuild.ml  myocamlbuild_config.ml  preproc.ml
components/heptagon/compiler/global/: check_signature.ml  clocks.ml  global_compare.ml  global_mapfold.ml  global_printer.ml  idents.ml  idents.mli  initial.ml  linearity.ml  modules.ml  signature.ml  static.ml
components/heptagon/compiler/heptagon/: _tags  hept_mapfold.ml  hept_printer.ml  hept_utils.ml  heptagon.ml
components/heptagon/compiler/main/: ctrl2ept.ml  hept2mls.ml  heptc.ml  hepts.ml  mls2obc.ml  mls2seq.ml
components/heptagon/compiler/minils/: _tags  minils.ml  mls_compare.ml  mls_mapfold.ml  mls_printer.ml  mls_utils.ml
components/heptagon/compiler/obc/: _tags  control.ml  obc.ml  obc_compare.ml  obc_mapfold.ml  obc_printer.ml  obc_utils.ml
components/heptagon/compiler/utilities/: _tags  containers.ml  misc.ml  pp_tools.ml  pp_tools.mli  sgraph.ml
components/heptagon/examples/Ctrl-DPR/: build.sh  main.ept
components/heptagon/examples/MC_inlined/: build  mc.ept  mc_ext.c  mc_ext.h  mcinlined.ept  mctypes.epi
components/heptagon/examples/MC_inlined_linear/: build  mc_ext.epi  mcinlined.ept  mctypes.epi
components/heptagon/examples/MC_memalloc/: build  cstPhysics.epi  cstTracksInit.epi  digital.ept  dv.ept  main.c  math.ept  mathext.h  mc.ept  mc_TypeInputs.epi  mc_TypeSensors.epi  mc_ext.epi  trackslib.ept  typeArray.epi  verif.ept
components/heptagon/examples/MissionComputer_for_Core/: build  cstArrayInit.epi  cstBaseInit.epi  debug.ept  mathext.c  mathext.epi  mc.ept  mc_TypeLists.epi  mc_ext.c  mc_ext.h  trackslib.ept  typeBase.epi  typeTracks.epi
components/heptagon/examples/alloc/: alloc.ept  build.sh
components/heptagon/examples/extern_C/: README  imports.ept  mathext.c  mathext.epi  mathext.h
components/heptagon/examples/heptreax/: README  modes.ept  twomodes.ept
components/heptagon/examples/lnum/: build.sh  lnum_simple.ept
components/heptagon/examples/migration/: Makefile  migration.ept
components/heptagon/examples/radio_transmitter/: Makefile  build.sh  radiotrans.ept
components/heptagon/examples/random/: README  markov.ept  mathext.c  mathext.epi  mathext.h  random.c  random.epi  random.h
components/heptagon/examples/reachability/: build.sh  reachability.ept
components/heptagon/lib/: Makefile  iostream.epi  mathlib.epi  pervasives.epi
components/heptagon/manual/: INSTALL  Makefile  heptagon-manual.tex  heptreax-manual.tex  macros.sty  manual.bib
components/heptagon/manual/figures/: mixed-state-df.epsi  mixed-state-df.ps  mixed-state-df.tex  node-contract.eps  node-contract.ps  node-contract.tex  pds-subcomponents.eps  pds-subcomponents.fig  pds-subcomponents.tex  struct-pg-f.eps  struct-pg-f.ps  struct-pg-f.tex  struct-pg-g.eps  struct-pg-g.ps  struct-pg-g.tex  struct-pg-h.eps  struct-pg-h.ps  struct-pg-h.tex  struct-pg.eps  struct-pg.epsi  struct-pg.ps  struct-pg.tex  updown-automaton.fig  updown-automaton.tex
components/heptagon/test/: CTestTestfile.cmake  check  gen_ctests
components/heptagon/test/async/: Wanted_Normalized_movie.java  java_m  lent.ept  obc_m  pipline.ept  pipline_a.ept  pipline_b.ept  rapide_lent.ept  rapide_lent_a.ept  scalarize.ept  tt.ept  ttt.ept
components/heptagon/test/bad/: bad_array_power.ept  bad_flatten.ept  bad_merge1.ept  bad_merge2.ept  bad_merge3.ept  bad_param_ident.ept  causality.ept  clock_annot.ept  clock_causality.ept  clock_dep.ept  clocking.ept  flatten.ept  linear_acc.ept  linear_autom.ept  linear_causality.ept  linear_fun.ept  linear_init.ept  linear_map.ept  linear_mapfold.ept  side_effect.ept  t1.ept  t10-initialization.ept  t11-initialization.ept  t12-initialization.ept  t2.ept  t3.ept  t4.ept  t5.ept  t6.ept  t7.ept  t8-causality.ept  t9-initialization.ept  when_merge1.ept
components/heptagon/test/good/: ais.ept  alloc.ept  array1.ept  array2.ept  array_fill.ept  array_iterators.ept  array_iterators2.ept  array_power.ept  auto.ept  auto_clock.ept  autohiera.ept  autohiera2.ept  autohiera3.ept  bad_updown.ept  ce.ept  ckannot.ept  clock_causality.ept  clocks.ept  const_record.ept  const_scope.ept  contract.ept  contract_automaton.ept  counter.ept  current.ept  cycle.ept  downscale.ept  fbyfby2.ept  foldi.ept  foldi_arrays.ept  format.ept  grosauto_clock.ept  hierarchie.ept  itfusion.ept  linear.ept  linear_automata.ept  linear_init.ept  linear_split.ept  linear_vars.ept  literals.ept  mapnot.ept  (+51 more)
components/heptagon/test/image_filters/: convolutions.ept  downscale.ept
components/heptagon/test/scripts/: compile_fail  compile_gcc_run  compile_javac_14_run  compile_javac_run  compile_only  compile_sdc_run  test_option
components/heptagon/test/sdc/: alloc.ept  contrenum.ept  (+7 more)
components/heptagon/tools/: bzreax  checkstyle.sh  debugger_script  debugger_script_gen.sh  decade.sty  enforce_style.sh  hept-mode.el  heptc-vhdl.sh  old_debugger_script
components/heptagon/web/: bib.php  header.php  index.php  rsyncweb  style.css  toc.php  try.php
(+665 files in other folders)
